--- a/src/components/HistoryItem/index.css
+++ b/src/components/HistoryItem/index.css
@@ -1,44 +1,50 @@
 .history-item {
   width: 98%;
   display: flex;
-
-  align-items: center;
+  flex-direction: column;
+  align-items: flex-start;
   margin: 10px;
+  margin-left: 0px;
 }
 .time-accessed {
   color: #475569;
   font-family: 'Roboto';
-  font-size: 16px;
+  font-size: 13px;
   font-weight: bolder;
-  width: 8%;
+  width: 20%;
 }
 .domain-container {
   display: flex;
   justify-content: space-between;
+
   width: 92%;
 }
 .domain-card {
   display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
 }
 .domain-logo {
   height: 25px;
   width: 25px;
-  align-self: center;
+
   margin-right: 20px;
 }
 .title {
   color: #475569;
   font-family: 'Roboto';
-  font-size: 16px;
-  align-self: center;
+  font-size: 13px;
+
   font-weight: bolder;
   margin-right: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
 }
 .domain-url {
   color: #64748b;
   font-family: 'Roboto';
-  font-size: 13px;
-  align-self: center;
+  font-size: 10px;
 }
 .delete-btn {
   outline-style: none;
